feat: Bacon Button component

--- a/frontend/assets/variables.css
+++ b/frontend/assets/variables.css
@@ -2,5 +2,7 @@ body {
   --base-background-color: #F7F8FA;
   --base-color: #333;
   --base-color-accent: #5A45FF;
+  --base-color-accent-contra: #F7F8FA;
   --base-font-family: 'Poppins', sans-serif;
+  --base-animation-time: 0.5s
 }
