--- a/frontend/assets/variables.css
+++ b/frontend/assets/variables.css
@@ -4,5 +4,7 @@ body {
   --base-color-accent: #5A45FF;
   --base-color-accent-contra: #F7F8FA;
   --base-font-family: 'Poppins', sans-serif;
-  --base-animation-time: 0.5s
+  --base-animation-time: 0.5s;
+
+  --checkout-font-family: 'Roboto', sans-serif;
 }
