feat: proto prerendering

--- a/frontend/views/index.edge
+++ b/frontend/views/index.edge
@@ -1,3 +1,6 @@
 @layout('layouts/main')
-@set('title', 'Home page')
+@set('title', 'Homepage | My Recruitment Task')
 
+@section('body')
+  <article data-v-7ef681b8="" data-test="base-article" class="base-article pages-index"><h1 data-v-7ef681b8="" data-test="base-header" class="base-header base-header--1">Hi SNOW.DOG team!</h1> <p data-v-7ef681b8="" data-test="base-paragraph" class="base-paragraph">\n    Here you can find links to Tasks.\n  </p> <ul data-v-7ef681b8="" data-test="base-list" class="base-list"><li data-v-7ef681b8="" data-test="base-list-item" class="base-list-item"><a data-v-7ef681b8="" href="/bacon" class="pages-index__link">Go to /bacon (Task 1)</a></li><li data-v-7ef681b8="" data-test="base-list-item" class="base-list-item"><a data-v-7ef681b8="" href="/checkout" class="pages-index__link">Go to /checkout (Task 2, 3, 4)</a></li></ul></article>
+@end
