--- a/frontend/views/layouts/main.edge
+++ b/frontend/views/layouts/main.edge
@@ -9,7 +9,9 @@
   </head>
   <body>
     <main>
-      <div id="app"></div>
+      <div id="app">
+        @!section('body')
+      </div>
     </main>
   </body>
 </html>
