--- a/frontend/assets/variables.css
+++ b/frontend/assets/variables.css
@@ -26,4 +26,5 @@ body {
   --checkout-form-background: white;
   --checkout-form-label-color: #484848;
   --checkout-form-label-font-size: 12px;
+  --checkout-form-font-size: 16px;
 }
